<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="197dp"
        android:layout_height="180dp"
        android:contentDescription="@string/todo"
        android:src="@mipmap/user"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="@id/guideline0"
        app:layout_constraintBottom_toTopOf="@id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:alpha="1"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline1"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints,NotSibling">

        <Spinner
            android:id="@+id/dropdown"
            android:layout_width="246dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:prompt="@string/choose"
            android:spinnerMode="dropdown" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:src="@mipmap/drop" />

    </RelativeLayout>

    <EditText
        android:id="@+id/username"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="12"
        android:focusable="true"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="#4C4E4A"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline1"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintVertical_bias="0.23"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:ems="12"
        android:focusable="true"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textColorHint="#4C4E4A"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline1"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintVertical_bias="0.42" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_bg"
        android:text="@string/login"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline1"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintVertical_bias="0.7"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1" />

</androidx.constraintlayout.widget.ConstraintLayout>