<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StopAttendance">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline6"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.0" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="86dp"
            android:layout_height="81dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/todo"
            android:src="@mipmap/user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline0"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/hello"
            android:textColor="#010625"
            android:textSize="18sp"
            android:typeface="serif"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline0"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="sans-serif-black"
            android:textColor="#010625"
            android:textSize="24sp"
            android:typeface="serif"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hello"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline7">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="1" />

        <TextView
            android:id="@+id/attendance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/attendance"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            android:typeface="serif"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/guideline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline3"
            app:layout_constraintVertical_bias="0.2"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/checkin"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:fontFamily="sans-serif-medium"
            android:text="@string/check_in"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:typeface="serif"
            app:layout_constraintBottom_toBottomOf="@id/guideline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline3"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints"
            android:alpha="0.25"/>

        <Button
            android:id="@+id/checkout"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:fontFamily="sans-serif-medium"
            android:text="@string/check_out"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:typeface="serif"
            app:layout_constraintBottom_toBottomOf="@id/guideline5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline3"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>